# iced_video_player

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
examples/: minimal.rs
src/: lib.rs  pipeline.rs  shader.wgsl  video.rs  video_player.rs
