[package]
name = "iced_video_player"
version = "0.1.0"
authors = ["jazzfool"]
edition = "2018"
resolver = "2"

[dependencies]
iced = { version = "0.12", features = ["image", "tokio"] } 
iced_native = "0.10"
gstreamer = "0.22" 
gstreamer-app = "0.22" # appsink 
glib = "0.19" # gobject traits and error type
tokio = { version = "1", features = ["time"] }
thiserror = "1" 
url = "2" # media uri

[package.metadata.nix]
systems = ["x86_64-linux"]
app = true
build = true
runtimeLibs = [
    "vulkan-loader",
    "wayland",
    "wayland-protocols",
    "libxkbcommon",
    "xorg.libX11",
    "xorg.libXrandr",
    "xorg.libXi", "gst_all_1.gstreamer", "gst_all_1.gstreamermm", "gst_all_1.gst-plugins-bad", "gst_all_1.gst-plugins-ugly", "gst_all_1.gst-plugins-good", "gst_all_1.gst-plugins-base",
]
buildInputs = ["libxkbcommon", "gst_all_1.gstreamer", "gst_all_1.gstreamermm", "gst_all_1.gst-plugins-bad", "gst_all_1.gst-plugins-ugly", "gst_all_1.gst-plugins-good", "gst_all_1.gst-plugins-base"]
