[package]
name = "iced_video_player"
description = "A convenient video player widget for Iced"
homepage = "https://github.com/jazzfool/iced_video_player"
repository = "https://github.com/jazzfool/iced_video_player"
readme = "README.md"
keywords = ["gui", "iced", "video"]
categories = ["gui", "multimedia"]
version = "0.6.0"
authors = ["jazzfool"]
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
exclude = [
    ".media/test.mp4"
]

[dependencies]
iced = { version = "0.13", features = ["image", "advanced", "wgpu"] }
iced_wgpu = "0.13"
gstreamer = "0.23"
gstreamer-app = "0.23" # appsink
gstreamer-base = "0.23" # basesrc
gstreamer-video = "0.23" # VideoMeta
glib = "0.20" # gobject traits and error type
log = "0.4"
thiserror = "1"
url = "2" # media uri

[package.metadata.nix]
systems = ["x86_64-linux"]
app = true
build = true
runtimeLibs = [
    "vulkan-loader",
    "wayland",
    "wayland-protocols",
    "libxkbcommon",
    "xorg.libX11",
    "xorg.libXrandr",
    "xorg.libXi", "gst_all_1.gstreamer", "gst_all_1.gstreamermm", "gst_all_1.gst-plugins-bad", "gst_all_1.gst-plugins-ugly", "gst_all_1.gst-plugins-good", "gst_all_1.gst-plugins-base",
]
buildInputs = ["libxkbcommon", "gst_all_1.gstreamer", "gst_all_1.gstreamermm", "gst_all_1.gst-plugins-bad", "gst_all_1.gst-plugins-ugly", "gst_all_1.gst-plugins-good", "gst_all_1.gst-plugins-base"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["wasm32-unknown-unknown"]
